# base-fastapi-app

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
admin/authentication/: __init__.py  backend.py
admin/google/: handlers.py
admin/views/: __init__.py  feedback.py  project.py  user.py
alembic/: env.py
alembic/versions/: 0181c2044a94_.py  388ce99c77ca_.py  d1660df2cf44_.py
api/: __init__.py
api/annotated_types/: __init__.py  base.py  project.py  record.py  user.py
api/dependecies/: __init__.py
api/dependecies/services/: user.py
api/dependencies/: __init__.py  database_session.py
api/dependencies/services/: auth.py  project.py  record.py  user.py
api/exception_handlers/: factory.py
api/exeptions/: __init__.py  auth.py  base.py
api/services/: __init__.py  auth.py  project.py  record.py  user.py
api/v1/: __init__.py
api/v1/auth/: __init__.py  handlers.py
api/v1/projects/: __init__.py  handlers.py
api/v1/records/: __init__.py  handlers.py
app/: __init__.py  app.py
app/metrics/: hooks.py  setup.py
app/middlewares/: setup.py
app/openapi/: __init__.py  description.py  setup.py  tags.py
app/routers/: setup.py
app/sentry/: setup.py
server/: __main__.py
settings/: _base.py  admin.py  database.py  google.py  jwt.py  redis.py  sentry.py  server.py  settings.py
src/config/: __init__.py  database.py  redis.py
src/database/: abc_uow.py  connection.py
src/dependecies/: __init__.py  database_session.py
src/enums/: __init__.py  jwt.py
src/exceptions/: __init__.py  auth.py  base.py  object_already_exist.py  object_not_found.py  project.py
src/middlewares/: __init__.py  clean_path.py
src/repos/: __init__.py  base.py  project.py  user.py
src/services/: __init__.py  user.py
src/types/: __init__.py  annotated.py  base.py  exceptions.py  pagination.py  user.py
src/utils/: datetime.py
statics/css/: select2.min.css
statics/js/: create.js  edit.js  main.js  theme.js
templates/sqladmin/: _macros.html  base.html  create.html  details.html  edit.html  filters.html  index.html  layout.html  list.html  login.html  search.html
(+54 files in other folders)
