[tool.poetry]
name = "base-fastapi-app"
version = "0.1.0"
description = "Base FastAPI application include administraion panel"
authors = ["n.mikhailovskii <n.mikhailovskii@atomgroup.io>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqladmin = "^0.20.1"
pyjwt = "^2.10.1"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
uvloop = "^0.21.0"
httptools = "^0.6.4"
itsdangerous = "^2.2.0"
orjson = "^3.10.15"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pre-commit = "^4.1.0"

[tool.ruff]
line-length = 120
target-version = "py312"
show-fixes = true
output-format = "concise"
src = ["."]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "UP",
    "ASYNC",
    "S",
    "BLE",
    "PIE",
    "T20",
    "C4",
    "RET",
    "COM",
    "I",
    "RUF200",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
    "COM812",
    "S101",
    "S104",
    "BLE001",
    "RET503",
]
fixable = ["ALL"]
unfixable = ["B", "N"]

[tool.ruff.lint.per-file-ignores]
'__init__.py' = [
    'F403',
    'F405',
]
"tests/*" = ["S101", "D103", "D101", "D102"]
"*pb2*.py" = ["I", "F401", "E402", "F541", "UP"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
